--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,15 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api_token:
+            pattern: ^/api/token
+            security: false
+        api:
+            pattern: ^/api
+            stateless: true
+            provider: app_user_provider
+            guard:
+                authenticators: ['App\Security\JWTAuthenticator']
         main:
             anonymous: true
             lazy: true
@@ -35,5 +44,4 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY, methods: [GET] }
