--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -17,3 +17,15 @@ cake_edit:
     controller: App\Controller\CakeController::edit
     requirements:
         cakeId: '\d+'
+
+api_token_create:
+    path: /api/token/create
+    controller: App\Controller\Api\TokenController::create
+
+api_token_refresh:
+    path: /api/token/refresh
+    controller: App\Controller\Api\TokenController::refresh
+
+api_cake_list:
+    path: /api/cakes
+    controller: App\Controller\Api\CakeController::list
