--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,9 @@ parameters:
     environment: '%env(APP_ENV)%'
     database_path: "%kernel.project_dir%/var/cakes.sqlite"
     pdo_dsn: "sqlite:%database_path%"
+    # RSA keys config
+    rsa_public_key_path: '%kernel.project_dir%/var/.ssh/public.pem'
+    rsa_private_key_path: '%kernel.project_dir%/var/.ssh/private.pem'
 
 services:
     # default configuration for services in *this* file
@@ -32,3 +35,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Security\Encoder:
+        lazy: true
+        arguments: [
+            '@=service("App\\Filesystem\\Reader").getFileContent(parameter("rsa_private_key_path"))',
+            '@=service("App\\Filesystem\\Reader").getFileContent(parameter("rsa_public_key_path"))'
+          ]
